; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_oidmap.c_git_oidmap_iterate.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_oidmap.c_git_oidmap_iterate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64 }

@GIT_ITEROVER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_oidmap_iterate(i8** %0, %struct.TYPE_6__* %1, i64* %2, i32** %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8**, align 8
  %7 = alloca %struct.TYPE_6__*, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i32**, align 8
  %10 = alloca i64, align 8
  store i8** %0, i8*** %6, align 8
  store %struct.TYPE_6__* %1, %struct.TYPE_6__** %7, align 8
  store i64* %2, i64** %8, align 8
  store i32** %3, i32*** %9, align 8
  %11 = load i64*, i64** %8, align 8
  %12 = load i64, i64* %11, align 8
  store i64 %12, i64* %10, align 8
  br label %13

13:                                               ; preds = %27, %4
  %14 = load i64, i64* %10, align 8
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp ult i64 %14, %17
  br i1 %18, label %19, label %25

19:                                               ; preds = %13
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %21 = load i64, i64* %10, align 8
  %22 = call i32 @kh_exist(%struct.TYPE_6__* %20, i64 %21)
  %23 = icmp ne i32 %22, 0
  %24 = xor i1 %23, true
  br label %25

25:                                               ; preds = %19, %13
  %26 = phi i1 [ false, %13 ], [ %24, %19 ]
  br i1 %26, label %27, label %30

27:                                               ; preds = %25
  %28 = load i64, i64* %10, align 8
  %29 = add i64 %28, 1
  store i64 %29, i64* %10, align 8
  br label %13

30:                                               ; preds = %25
  %31 = load i64, i64* %10, align 8
  %32 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  %35 = icmp uge i64 %31, %34
  br i1 %35, label %36, label %38

36:                                               ; preds = %30
  %37 = load i32, i32* @GIT_ITEROVER, align 4
  store i32 %37, i32* %5, align 4
  br label %58

38:                                               ; preds = %30
  %39 = load i32**, i32*** %9, align 8
  %40 = icmp ne i32** %39, null
  br i1 %40, label %41, label %46

41:                                               ; preds = %38
  %42 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %43 = load i64, i64* %10, align 8
  %44 = call i32* @kh_key(%struct.TYPE_6__* %42, i64 %43)
  %45 = load i32**, i32*** %9, align 8
  store i32* %44, i32** %45, align 8
  br label %46

46:                                               ; preds = %41, %38
  %47 = load i8**, i8*** %6, align 8
  %48 = icmp ne i8** %47, null
  br i1 %48, label %49, label %54

49:                                               ; preds = %46
  %50 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %51 = load i64, i64* %10, align 8
  %52 = call i8* @kh_value(%struct.TYPE_6__* %50, i64 %51)
  %53 = load i8**, i8*** %6, align 8
  store i8* %52, i8** %53, align 8
  br label %54

54:                                               ; preds = %49, %46
  %55 = load i64, i64* %10, align 8
  %56 = add i64 %55, 1
  store i64 %56, i64* %10, align 8
  %57 = load i64*, i64** %8, align 8
  store i64 %56, i64* %57, align 8
  store i32 0, i32* %5, align 4
  br label %58

58:                                               ; preds = %54, %36
  %59 = load i32, i32* %5, align 4
  ret i32 %59
}

declare dso_local i32 @kh_exist(%struct.TYPE_6__*, i64) #1

declare dso_local i32* @kh_key(%struct.TYPE_6__*, i64) #1

declare dso_local i8* @kh_value(%struct.TYPE_6__*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
